Fix/#1192 enable saving of dark mode theme (#1200)
* chore: enable saving of dark mode theme

* FIX: toggle switches on dark mode

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -96,7 +96,7 @@
     transform: translateY(-50%);
     transition: 0.3s;
 }
-.Header .toggle-checkbox:checked + .toggle-switch:before {
+.dark-mode .Header .toggle-checkbox:checked + .toggle-switch:before {
     left: 22px;
     background-color: #2c2c2c;
 }
